CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(GLF90W
    VERSION 0.0.1
    DESCRIPTION "Fortran bindings for GLFW."
    HOMEPAGE_URL https://github.com/aarnoldgad/glf90w.git
    LANGUAGES C CXX Fortran
)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDER ON)

SET(CMAKE_CONFIGURATION_TYPES Release Debug)
SET(CMAKE_DEBUG_POSTFIX -d)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
IF(UNIX AND NOT APPLE)
    FIND_PACKAGE(X11 REQUIRED)
ENDIF()

ADD_SUBDIRECTORY(glfw)

ADD_LIBRARY(glf90w INTERFACE)

#TARGET_COMPILE_DEFINITIONS(glf90w INTERFACE)
TARGET_SOURCES(glf90w INTERFACE glf90w.f90 glf90w_c_interop.f90)

TARGET_LINK_LIBRARIES(glf90w INTERFACE
    glfw
    OpenGL::GL

    $<$<PLATFORM_ID:Linux>:X11::X11>
)

